# sui-oyster-demo

./: .gitignore  README.md  flake.nix  nix.sh
contracts/: .gitignore  Move.toml  Published.toml  README.md
contracts/Demo/: Move.toml
contracts/Demo/sources/: oyster_demo.move
contracts/Demo/tests/: oyster_demo_tests.move
contracts/EnclaveRegistry/: Move.toml
contracts/EnclaveRegistry/sources/: enclave_registry.move
contracts/EnclaveRegistry/tests/: enclave_registry_tests.move
contracts/deployments/: objects.toml
contracts/script/: get_price.sh  get_registry_pcrs.sh  initialize_oracle.sh  query_enclave.sh  register_enclave.sh  update_price.sh
contracts/sources/: enclave.move  oyster_demo.move
contracts/tests/: oyster_demo_tests.move
enclave/: .dockerignore  docker-compose.yml
enclave/src/: main.rs
enclave_node/: .dockerignore  Dockerfile  README.md  build.nix  docker-compose.yml  package-lock.json  package.json
enclave_node/src/: index.js
enclave_python/: .dockerignore  Dockerfile  README.md  build.nix  docker-compose.yml  requirements.txt
enclave_python/src/: main.py
enclave_rust/: .gitignore  Cargo.toml  Dockerfile  README.md  build.nix  docker-compose.yml
enclave_rust/src/: main.rs
