[package]
name = "sui-price-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
sha2 = "0.10"
rand = "0.8"
bcs = "0.1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
